--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fontsource/fira-code": "^5.0.18",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
     "@trpc/client": "^11.0.0-rc.446",
@@ -17,6 +18,7 @@
     "@trpc/server": "^11.0.0-rc.446",
     "geist": "^1.3.0",
     "next": "^14.2.4",
+    "next-view-transitions": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "server-only": "^0.0.1",
