--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.3.24",
     "geist": "^1.3.0",
     "next": "^14.2.4",
     "next-view-transitions": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-use": "^17.5.1",
     "server-only": "^0.0.1",
+    "starfield-react": "^3.1.0-dev-5",
     "superjson": "^2.2.1",
     "zod": "^3.23.3"
   },
